<resources>
    <string name="app_name">QuizHack</string>
    <string name="banner_ad_unit_id">ca-app-pub-2934083584902567/8358545361</string>
    <string name="one">1). Select Your Search Engine then Click on \"START\" &amp; remain the App open in background .</string>
    <string name="two">2). Click on round icon named (\"TOUCH\") . </string>
    <string name="three">3). Select complete region containing Questions with it\'s 3 option\'s .</string>
    <string name="four">4). Mark your answer with max \"Rating\'s\" .</string>
</resources>
